update: move s3 interaction to the end - less interesting
Former-commit-id: 4e485aa4cce4af7f019fe32cd1db0a872cc77828

--- a/notebooks/fingerprint/model_train_s3_leftright.ipynb
+++ b/notebooks/fingerprint/model_train_s3_leftright.ipynb
@@ -20,7 +20,7 @@
     "## About the notebook\n",
     "The intention of this notebook is to demonstrate steps from data ingestion to model saving that provides an accurate enough model that predicts if a fingerprint comes from a left or right hand. Coupled with other models that accurately predict finger and gender is valuable when matching against other identifiable information.\n",
     "\n",
-    "1. *Data Ingestion* from object storage\n",
+    "1. *Data Ingestion* [from object storage](#working-with-s3-buckets)\n",
     "1. *Dataset preparation* (infer labels, splitting, augmenting, optimizing)\n",
     "1. *Model Development* from scratch and *Training Strategies* (one device, mirrored, multi-worker mirrored)\n",
     "1. *Model Performance* Hyperparameter Tuning strategies (RandomSearch, Hyperband, BayesianOptimization, Sklearn)\n",
@@ -29,10 +29,10 @@
     "\n",
     "### Notebook Tested Requirements\n",
     "\n",
-    "|Notebook origin|Notebook Customization|Instance Type|Kernel|TensorFlow|Runtime||||\n",
-    "|:-------|:-------|:-------|:-------|:-------|:-------|:-------|:-------|:-------|\n",
-    "|SageMaker Notebook Instances|[from GitHub](https://github.com/redhat-na-ssa/demo-rosa-sagemaker/blob/main/sagemaker/lifecycle-from-github.sh)|ml.m5.4xlarge (vCPU: 16, RAM: 64 GiB)|conda_tensorflow2_p310|2.11|~120 minutes||||\n",
-    "|SageMaker Notebook Instances|[from GitHub](https://github.com/redhat-na-ssa/demo-rosa-sagemaker/blob/main/sagemaker/lifecycle-from-github.sh)|ml.p3.8xlarge (vCPU: 32, RAM: 244 GiB)|conda_tensorflow2_p310|2.11|~15 minutes||||"
+    "|Notebook origin|Notebook Customization|Instance Type|Kernel|TensorFlow|Runtime|\n",
+    "|:-------|:-------|:-------|:-------|:-------|:-------|\n",
+    "|SageMaker Notebook Instances|[from GitHub](https://github.com/redhat-na-ssa/demo-rosa-sagemaker/blob/main/sagemaker/lifecycle-from-github.sh)|ml.m5.4xlarge (vCPU: 16, RAM: 64 GiB)|conda_tensorflow2_p310|2.11|~120 minutes|\n",
+    "|SageMaker Notebook Instances|[from GitHub](https://github.com/redhat-na-ssa/demo-rosa-sagemaker/blob/main/sagemaker/lifecycle-from-github.sh)|ml.p3.8xlarge (vCPU: 32, RAM: 244 GiB)|conda_tensorflow2_p310|2.11|~15 minutes|"
    ]
   },
   {
@@ -53,8 +53,8 @@
     "# Install packages and frameworks\n",
     "\n",
     "# pkgs installed via notebook lifecycle script\n",
-    "# ! pip install -U pip --quiet\n",
-    "# ! pip install -r ../../requirements.txt --quiet\n",
+    "#! pip install -U pip --quiet\n",
+    "#! pip install -r ../../requirements.txt --quiet\n",
     "\n",
     "import tensorflow as tf\n",
     "import os\n",
@@ -97,7 +97,7 @@
    "source": [
     "# this directory is apart of the .gitignore to ensure it is not committed to git\n",
     "%env SCRATCH=../scratch\n",
-    "! [ -e \"${SCRATCH}\" ] || mkdir -p \"${SCRATCH}\"/models/hand\n",
+    "! [ -e \"${SCRATCH}\" ] || mkdir -p \"${SCRATCH}\"\n",
     "\n",
     "scratch_path = os.environ.get('SCRATCH', '../scratch')"
    ]
@@ -134,158 +134,6 @@
     "! tar -xJf ./compressed_data/left.xz -C \"${SCRATCH}\"/hand/left/ && \\\n",
     "  tar -xJf ./compressed_data/right.xz -C \"${SCRATCH}\"/hand/right && \\\n",
     "  tar -xJf ./compressed_data/real.xz -C \"${SCRATCH}\"/ "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "9104057a",
-   "metadata": {},
-   "source": [
-    "## Connect to S3 Buckets\n",
-    "\n",
-    "Boto3 allows for easy access to AWS tools and objects. We will establish the resource and list the s3 buckets available.\n",
-    "\n",
-    "***ACTION REQUIRED:***\n",
-    "\n",
-    "Create S3 Buckets:\n",
-    "- `sagemaker-fingerprint-data`\n",
-    "- `sagemaker-fingerprint-models`\n",
-    "\n",
-    "`IMPORTANT: in order for sagemaker to write or read, the bucket names MUST include \"sagemaker-\"`\n",
-    "\n",
-    "### OpenShift\n",
-    "\n",
-    "Use CR with ACK Operator for S3 from the OpenShift console or `oc`\n",
-    "\n",
-    "See CRs in [openshift/examples](../../openshift/examples/)\n",
-    "\n",
-    "```\n",
-    "oc apply -f openshift/examples/s3-sagemaker-fingerprint-data-cr.yml\n",
-    "oc apply -f openshift/examples/s3-sagemaker-fingerprint-models-cr.yml\n",
-    "```\n",
-    "\n",
-    "### AWS\n",
-    "- See below [`aws` example](#aws-s3-cli)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0168d92-cfd5-4444-b9cb-252cceaac5d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# boto3 library allows for easy access to aws ecosystem of tools and products\n",
-    "# SageMaker is a part of aws ecosystem of tools, so it allows easy access to S3\n",
-    "import boto3\n",
-    "\n",
-    "s3 = boto3.resource('s3')\n",
-    "\n",
-    "# list all available buckets\n",
-    "for bucket in s3.buckets.all():\n",
-    "    print(bucket)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f34c2219-49ed-4d46-9443-c68b15777c8e",
-   "metadata": {},
-   "source": [
-    "## AWS S3 CLI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f71057f1-61f1-493d-8f78-7355c888d599",
-   "metadata": {},
-   "source": [
-    "### Create S3 Bucket\n",
-    "\n",
-    "Create `sagemaker-fingerprint-data` and `sagemaker-fingerprint-models`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a15f15b-412e-41ea-94cd-32d489bc2a5a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create bucket\n",
-    "! aws s3api create-bucket \\\n",
-    "    --bucket sagemaker-fingerprint-data \\\n",
-    "    --region us-east-2 \\\n",
-    "    --create-bucket-configuration LocationConstraint=us-east-2\n",
-    "\n",
-    "! aws s3api create-bucket \\\n",
-    "    --bucket sagemaker-fingerprint-models \\\n",
-    "    --region us-east-2 \\\n",
-    "    --create-bucket-configuration LocationConstraint=us-east-2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e22214a6-968f-4a63-8b24-04086b35f296",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# list objects using the aws s3 cli\n",
-    "! aws s3 ls"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "e855be42-785d-4cc7-9352-0b7f36859322",
-   "metadata": {},
-   "source": [
-    "### Upload training data to s3\n",
-    "\n",
-    "1. Upload left data from `scratch` to `s3://sagemaker-fingerprint-data/left`\n",
-    "1. Upload right data from `scratch` to `s3://sagemaker-fingerprint-data/right`\n",
-    "1. Upload real data from `scratch` to `s3://sagemaker-fingerprint-data`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6b733d1-8f8f-486a-a9e0-8264321315a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# upload the objects to s3 demonstrating interaction with object storage\n",
-    "! aws s3 sync ${SCRATCH}/hand/left s3://sagemaker-fingerprint-data/hand/left --quiet && \\\n",
-    "  aws s3 sync ${SCRATCH}/hand/right s3://sagemaker-fingerprint-data/hand/right --quiet && \\\n",
-    "  aws s3 sync ${SCRATCH}/real s3://sagemaker-fingerprint-data/real --quiet"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "c18047be-9dc0-4b3e-b60c-1f2dd36bdc7a",
-   "metadata": {},
-   "source": [
-    "### Download training data from s3 (optional)\n",
-    "\n",
-    "1. Download left data from `s3://sagemaker-fingerprint-data/left` to `train/left`\n",
-    "1. Download right data from `s3://sagemaker-fingerprint-data/right` to `train/right`\n",
-    "1. Download real data from `s3://sagemaker-fingerprint-data`  to `real`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ffbc157-1ca2-43c2-8d28-04fbf1598dfa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# download the objects to s3 demonstrating interaction with object storage\n",
-    "\n",
-    "#! aws s3 sync s3://sagemaker-fingerprint-data/hand/left $SCRATCH/hand/left --quiet && \\\n",
-    "#  aws s3 sync s3://sagemaker-fingerprint-data/hand/right $SCRATCH/hand/right --quiet && \\\n",
-    "#  aws s3 sync s3://sagemaker-fingerprint-data/real $SCRATCH/real --quiet"
    ]
   },
   {
@@ -1079,28 +927,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60023558",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## S3 \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14928535-7f5a-4fa5-8b6b-4e0aa7c138ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save the models to S3\n",
-    "! aws s3 sync ${SCRATCH}/models s3://sagemaker-fingerprint-models/models"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "0cc59007",
    "metadata": {},
    "source": [
@@ -1218,6 +1044,188 @@
     "    \"This image most likely belongs to {} with a {:.2f} percent confidence.\"\n",
     "    .format(class_names[np.argmax(score)], 100 * np.max(score))\n",
     ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9104057a",
+   "metadata": {},
+   "source": [
+    "## Working with S3 Buckets\n",
+    "\n",
+    "***ACTION REQUIRED:***\n",
+    "\n",
+    "Create S3 Buckets:\n",
+    "- `sagemaker-fingerprint-data`\n",
+    "- `sagemaker-fingerprint-models`\n",
+    "\n",
+    "`IMPORTANT: in order for sagemaker to write or read, the bucket names MUST include \"sagemaker-\"`\n",
+    "\n",
+    "### OpenShift\n",
+    "\n",
+    "Use CR with ACK Operator for S3 from the OpenShift console or `oc`\n",
+    "\n",
+    "See CRs in [openshift/examples](../../openshift/examples/)\n",
+    "\n",
+    "```\n",
+    "oc apply -f openshift/examples/s3-sagemaker-fingerprint-data-cr.yml\n",
+    "oc apply -f openshift/examples/s3-sagemaker-fingerprint-models-cr.yml\n",
+    "```\n",
+    "\n",
+    "### AWS\n",
+    "- See below [`aws` s3 cli](#aws-s3-cli)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f34c2219-49ed-4d46-9443-c68b15777c8e",
+   "metadata": {},
+   "source": [
+    "## AWS S3 CLI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f71057f1-61f1-493d-8f78-7355c888d599",
+   "metadata": {},
+   "source": [
+    "### Create S3 Bucket\n",
+    "\n",
+    "Create `sagemaker-fingerprint-data` and `sagemaker-fingerprint-models`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a15f15b-412e-41ea-94cd-32d489bc2a5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create bucket\n",
+    "! aws s3api create-bucket \\\n",
+    "    --bucket sagemaker-fingerprint-data \\\n",
+    "    --region us-east-2 \\\n",
+    "    --create-bucket-configuration LocationConstraint=us-east-2\n",
+    "\n",
+    "! aws s3api create-bucket \\\n",
+    "    --bucket sagemaker-fingerprint-models \\\n",
+    "    --region us-east-2 \\\n",
+    "    --create-bucket-configuration LocationConstraint=us-east-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e22214a6-968f-4a63-8b24-04086b35f296",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list objects using the aws s3 cli\n",
+    "! aws s3 ls"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e855be42-785d-4cc7-9352-0b7f36859322",
+   "metadata": {},
+   "source": [
+    "### Upload training data to s3\n",
+    "\n",
+    "1. Upload left data from `scratch` to `s3://sagemaker-fingerprint-data/left`\n",
+    "1. Upload right data from `scratch` to `s3://sagemaker-fingerprint-data/right`\n",
+    "1. Upload real data from `scratch` to `s3://sagemaker-fingerprint-data`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6b733d1-8f8f-486a-a9e0-8264321315a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# upload the objects to s3 demonstrating interaction with object storage\n",
+    "! aws s3 sync ${SCRATCH}/hand/left s3://sagemaker-fingerprint-data/hand/left --quiet && \\\n",
+    "  aws s3 sync ${SCRATCH}/hand/right s3://sagemaker-fingerprint-data/hand/right --quiet && \\\n",
+    "  aws s3 sync ${SCRATCH}/real s3://sagemaker-fingerprint-data/real --quiet"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c18047be-9dc0-4b3e-b60c-1f2dd36bdc7a",
+   "metadata": {},
+   "source": [
+    "### Download training data from s3\n",
+    "\n",
+    "1. Download left data from `s3://sagemaker-fingerprint-data/left` to `train/left`\n",
+    "1. Download right data from `s3://sagemaker-fingerprint-data/right` to `train/right`\n",
+    "1. Download real data from `s3://sagemaker-fingerprint-data`  to `real`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ffbc157-1ca2-43c2-8d28-04fbf1598dfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# download the objects to s3 demonstrating interaction with object storage\n",
+    "! aws s3 sync s3://sagemaker-fingerprint-data/hand/left $SCRATCH/hand/left --quiet && \\\n",
+    " aws s3 sync s3://sagemaker-fingerprint-data/hand/right $SCRATCH/hand/right --quiet && \\\n",
+    " aws s3 sync s3://sagemaker-fingerprint-data/real $SCRATCH/real --quiet"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "60023558",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Upload tested models to S3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14928535-7f5a-4fa5-8b6b-4e0aa7c138ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the models to S3\n",
+    "! aws s3 sync ${SCRATCH}/models s3://sagemaker-fingerprint-models/models"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1aaf1586",
+   "metadata": {},
+   "source": [
+    "### Boto3 usage\n",
+    "\n",
+    "Boto3 allows for easy access to AWS resources. We will list the s3 buckets available. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0168d92-cfd5-4444-b9cb-252cceaac5d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# boto3 library allows for easy access to aws ecosystem of tools and products\n",
+    "# SageMaker is a part of aws ecosystem of tools, so it allows easy access to S3\n",
+    "import boto3\n",
+    "\n",
+    "s3 = boto3.resource('s3')\n",
+    "\n",
+    "# list all available buckets\n",
+    "for bucket in s3.buckets.all():\n",
+    "    print(bucket)"
    ]
   },
   {
