--- a/notebooks/fingerprint/model_train_s3_leftright.ipynb
+++ b/notebooks/fingerprint/model_train_s3_leftright.ipynb
@@ -77,15 +77,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3b492230",
    "metadata": {},
    "source": [
     "## Create local directory structure\n",
     "\n",
-    "- decompressed_data: to store the decompressed training examples\n",
-    "- model: to demonstrate storing the saved models and hyperparameter trials results\n",
-    "- train and test: to demonstrate download interaction with s3"
+    "- hand/left,right: store the decompressed training examples\n",
+    "- models: store the saved models (local and S3)\n",
+    "- tune: hyperparameter trials results"
    ]
   },
   {
@@ -95,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this directory is apart of the .gitignore to ensure it is not committed to git\n",
+    "# scratch directory is apart of the .gitignore to ensure it is not committed to git\n",
     "%env SCRATCH=../scratch\n",
     "! [ -e \"${SCRATCH}\" ] || mkdir -p \"${SCRATCH}\"\n",
     "\n",
@@ -109,7 +110,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a train and real folder and create a left and right folder under train\n",
     "! mkdir -p \"${SCRATCH}\"/{hand,models,real} && \\\n",
     "  mkdir -p \"${SCRATCH}\"/hand/{left,right}"
    ]
@@ -173,7 +173,6 @@
    "outputs": [],
    "source": [
     "# set variables for consistency\n",
-    "\n",
     "img_height = 96              # desired height\n",
     "img_width = 96               # desired width\n",
     "batch_size = 32              # batch inputs in 32\n",
@@ -199,7 +198,6 @@
    "outputs": [],
    "source": [
     "# create the training dataset\n",
-    "\n",
     "train_ds = tf.keras.preprocessing.image_dataset_from_directory(\n",
     "    scratch_path + '/hand',\n",
     "    labels='inferred',\n",
@@ -233,7 +231,6 @@
    "outputs": [],
    "source": [
     "# create the validation dataset\n",
-    "\n",
     "validation_ds = tf.keras.preprocessing.image_dataset_from_directory(\n",
     "    scratch_path + '/hand',\n",
     "    labels='inferred',\n",
@@ -267,7 +264,6 @@
    "outputs": [],
    "source": [
     "# create the test dataset\n",
-    "\n",
     "test_ds = validation_ds.take(16)\n",
     "validation_ds = validation_ds.skip(16)"
    ]
@@ -311,7 +307,6 @@
    "outputs": [],
    "source": [
     "# display the class names inferred from the training dataset\n",
-    "\n",
     "class_names = train_ds.class_names\n",
     "print(class_names)"
    ]
@@ -332,7 +327,6 @@
    "outputs": [],
    "source": [
     "# show the first 10 images in the training dataset\n",
-    "\n",
     "from IPython.display import clear_output\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -350,13 +344,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "61c7699e",
    "metadata": {},
    "source": [
     "## Apply augmentation\n",
     "\n",
-    "When you don't have a large image dataset or when your images are all set in a single direction like ours are, it's a good practice to artificially introduce sample diversity by applying random, yet realistic, transformations to the training images, such as rotation and horizontal flipping. This helps expose the model to different aspects of the training data and reduce overfitting. Learn more https://www.tensorflow.org/tutorials/images/data_augmentation"
+    "When you don't have a large image dataset or when your images are all set in a single direction like ours are, it's a good practice to artificially introduce sample diversity by applying random, yet realistic, transformations to the training images, such as rotation and horizontal flipping. This helps expose the model to different aspects of the training data and reduce over-fitting. \n",
+    "\n",
+    "Learn more https://www.tensorflow.org/tutorials/images/data_augmentation"
    ]
   },
   {
@@ -604,7 +601,6 @@
    "outputs": [],
    "source": [
     "# build model from scratch\n",
-    "\n",
     "! pip install keras-tuner -q\n",
     "\n",
     "from tensorflow.keras.models import Sequential, Model, load_model\n",
@@ -676,6 +672,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a16b28b8",
    "metadata": {},
@@ -688,7 +685,9 @@
     "1. BayesianOptimization\n",
     "1. Sklearn. \n",
     "\n",
-    "In this tutorial, you use the Hyperband tuner. The Hyperband tuning algorithm uses adaptive resource allocation and early-stopping to quickly converge on a high-performing model. This is done using a sports championship style bracket. The algorithm trains a large number of models for a few epochs and carries forward only the top-performing half of models to the next round. \n",
+    "In this tutorial, you use the Hyperband tuner. \n",
+    "\n",
+    "The Hyperband tuning algorithm uses adaptive resource allocation and early-stopping to quickly converge on a high-performing model. This is done using a sports championship style bracket. The algorithm trains a large number of models for a few epochs and carries forward only the top-performing half of models to the next round. \n",
     "\n",
     "To instantiate the Hyperband tuner, you must specify the hypermodel, the objective to optimize and the maximum number of epochs to train (max_epochs)."
    ]
@@ -701,7 +700,6 @@
    "outputs": [],
    "source": [
     "num_classes = len(class_names)\n",
-    "model_path = scratch_path + '/models/fingerprint/1/model.savedmodel'\n",
     "\n",
     "# open a strategy scope\n",
     "tuner = kt.Hyperband(\n",
@@ -909,7 +907,7 @@
    "id": "50dbdc54",
    "metadata": {},
    "source": [
-    "## Locally\n",
+    "## Save locally\n",
     "\n",
     "Triton MUST have the model artifacts as `model.savedmodel`"
    ]
@@ -921,8 +919,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tf.saved_model.save(model, path_to_dir)\n",
-    "model.save(scratch_path + '/models/fingerprint/1/model.savedmodel')"
+    "# note: tf.saved_model.save(model, path_to_dir)\n",
+    "model_path = scratch_path + '/models/fingerprint/1/model.savedmodel'\n",
+    "model.save(model_path)"
    ]
   },
   {
@@ -948,7 +947,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = keras.models.load_model(scratch_path + '/models/fingerprint/1/model.savedmodel')"
+    "model_path = scratch_path + '/models/fingerprint/1/model.savedmodel'\n",
+    "model = keras.models.load_model(model_path)"
    ]
   },
   {
@@ -978,9 +978,7 @@
     "import random\n",
     "\n",
     "samples_path = scratch_path + '/real/'\n",
-    "\n",
     "file_list = os.listdir(samples_path)\n",
-    "\n",
     "print('Files in path: ' + str(len(file_list)))\n",
     "\n",
     "test_image = random.choice(file_list)\n",
@@ -993,7 +991,6 @@
     "\n",
     "#test_image = samples_path + '1__M_Left_little_finger.png'\n",
     "#test_image = samples_path + '105__M_Left_little_finger.png'\n",
-    "\n",
     "#test_image = samples_path + '467__M_Left_little_finger.png'\n",
     "\n",
     "# loads an image into PIL format.\n",
@@ -1006,7 +1003,7 @@
     "\n",
     "plt.imshow(img, cmap='gray')\n",
     "\n",
-    "# converts a PIL Image instance to a Numpy array.\n",
+    "# converts a PIL image instance to a numpy array\n",
     "img_array = tf.keras.utils.img_to_array(img)"
    ]
   },
