update: raw data handling

--- a/notebooks/fingerprint/model_train_s3_leftright.ipynb
+++ b/notebooks/fingerprint/model_train_s3_leftright.ipynb
@@ -92,6 +92,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "876c132b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# kludge: download dataset from git\n",
+    "! git clone https://github.com/redhat-na-ssa/demo-rosa-sagemaker-data.git ../../scratch/.raw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "089211a5",
    "metadata": {},
    "outputs": [],
