update: notebook scratch cmd

--- a/notebooks/fingerprint/model_train_s3_leftright.ipynb
+++ b/notebooks/fingerprint/model_train_s3_leftright.ipynb
@@ -84,20 +84,11 @@
    "source": [
     "## Create local directory structure\n",
     "\n",
-    "- hand/left,right: store the decompressed training examples\n",
-    "- models: store the saved models (local and S3)\n",
-    "- tune: hyperparameter trials results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "876c132b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# kludge: download dataset from git\n",
-    "! git clone https://github.com/redhat-na-ssa/demo-rosa-sagemaker-data.git ../../scratch/.raw"
+    "- scratch: ignored by git; keep data out of git\n",
+    "- models: saved models\n",
+    "- real: \"real\" simulated samples\n",
+    "- tune: hyperparameter trials results\n",
+    "- train: decompressed training examples"
    ]
   },
   {
@@ -108,10 +99,10 @@
    "outputs": [],
    "source": [
     "# scratch directory is apart of the .gitignore to ensure it is not committed to git\n",
-    "%env SCRATCH=../scratch\n",
+    "%env SCRATCH=../../scratch\n",
     "! [ -e \"${SCRATCH}\" ] || mkdir -p \"${SCRATCH}\"\n",
     "\n",
-    "scratch_path = os.environ.get('SCRATCH', '../scratch')"
+    "scratch_path = os.environ.get('SCRATCH', './scratch')"
    ]
   },
   {
@@ -121,8 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! mkdir -p \"${SCRATCH}\"/{hand,models,real} && \\\n",
-    "  mkdir -p \"${SCRATCH}\"/hand/{left,right}"
+    "! mkdir -p \"${SCRATCH}\"/{models,real,tune,train}"
    ]
   },
   {
@@ -138,13 +128,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "876c132b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# kludge: download dataset from git\n",
+    "! git clone https://github.com/redhat-na-ssa/demo-rosa-sagemaker-data.git ${SCRATCH}/.raw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a85a1779",
    "metadata": {},
    "outputs": [],
    "source": [
-    "! tar -xJf ./compressed_data/left.xz -C \"${SCRATCH}\"/hand/left/ && \\\n",
-    "  tar -xJf ./compressed_data/right.xz -C \"${SCRATCH}\"/hand/right && \\\n",
-    "  tar -xJf ./compressed_data/real.xz -C \"${SCRATCH}\"/ "
+    "! tar -Jxf ${SCRATCH}/.raw/left.tar.xz -C \"${SCRATCH}\"/train/ && \\\n",
+    "  tar -Jxf ${SCRATCH}/.raw/right.tar.xz -C \"${SCRATCH}\"/train/ && \\\n",
+    "  tar -Jxf ${SCRATCH}/.raw/real.tar.xz -C \"${SCRATCH}\""
    ]
   },
   {
@@ -166,7 +167,7 @@
     "Keras utility generates a dataset from image files in a directory and infers the labels based on the parent folder. This utility will return a tf.data.Dataset that yields batches of images from the subdirectories left and right\n",
     "\n",
     "```\n",
-    "hand/\n",
+    "train/\n",
     "├── left/\n",
     "│   ├── a_image_1.jpg\n",
     "│   └── a_image_2.jpg\n",
