update: notebook make more agnostic

--- a/notebooks/fingerprint/model_train_s3_leftright.ipynb
+++ b/notebooks/fingerprint/model_train_s3_leftright.ipynb
@@ -211,7 +211,7 @@
    "source": [
     "# create the training dataset\n",
     "train_ds = tf.keras.preprocessing.image_dataset_from_directory(\n",
-    "    scratch_path + '/hand',\n",
+    "    scratch_path + '/train',\n",
     "    labels='inferred',\n",
     "    label_mode = \"categorical\", \n",
     "    class_names=['left','right'],\n",
@@ -244,7 +244,7 @@
    "source": [
     "# create the validation dataset\n",
     "validation_ds = tf.keras.preprocessing.image_dataset_from_directory(\n",
-    "    scratch_path + '/hand',\n",
+    "    scratch_path + '/train',\n",
     "    labels='inferred',\n",
     "    label_mode = \"categorical\", \n",
     "    class_names=['left','right'],\n",
@@ -1155,8 +1155,8 @@
    "outputs": [],
    "source": [
     "# upload the objects to s3 demonstrating interaction with object storage\n",
-    "! aws s3 sync ${SCRATCH}/hand/left s3://sagemaker-fingerprint-data/hand/left --quiet && \\\n",
-    "  aws s3 sync ${SCRATCH}/hand/right s3://sagemaker-fingerprint-data/hand/right --quiet && \\\n",
+    "! aws s3 sync ${SCRATCH}/train/left s3://sagemaker-fingerprint-data/train/left --quiet && \\\n",
+    "  aws s3 sync ${SCRATCH}/train/right s3://sagemaker-fingerprint-data/train/right --quiet && \\\n",
     "  aws s3 sync ${SCRATCH}/real s3://sagemaker-fingerprint-data/real --quiet"
    ]
   },
@@ -1181,8 +1181,8 @@
    "outputs": [],
    "source": [
     "# download the objects to s3 demonstrating interaction with object storage\n",
-    "! aws s3 sync s3://sagemaker-fingerprint-data/hand/left $SCRATCH/hand/left --quiet && \\\n",
-    " aws s3 sync s3://sagemaker-fingerprint-data/hand/right $SCRATCH/hand/right --quiet && \\\n",
+    "! aws s3 sync s3://sagemaker-fingerprint-data/train/left $SCRATCH/train/left --quiet && \\\n",
+    " aws s3 sync s3://sagemaker-fingerprint-data/train/right $SCRATCH/train/right --quiet && \\\n",
     " aws s3 sync s3://sagemaker-fingerprint-data/real $SCRATCH/real --quiet"
    ]
   },
