update tflite and AWS cli section

--- a/notebooks/fingerprint/model_train_s3_leftright.ipynb
+++ b/notebooks/fingerprint/model_train_s3_leftright.ipynb
@@ -1070,7 +1070,7 @@
    "id": "9104057a",
    "metadata": {},
    "source": [
-    "## Working with S3 Buckets\n",
+    "# Working with S3 Buckets\n",
     "\n",
     "***ACTION REQUIRED:***\n",
     "\n",
