--- a/notebooks/fingerprint/model_train_s3_leftright.ipynb
+++ b/notebooks/fingerprint/model_train_s3_leftright.ipynb
@@ -122,13 +122,36 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "62063b13",
    "metadata": {},
    "source": [
     "## Decompress the data for training\n",
     "\n",
-    "This is just a simple way to get the decompressed data into the S3 Bucket that keeps this demo and data together."
+    "Let's check for an existing S3 Bucket for training data.\n",
+    "If it's not in S3, we will try other options..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a85a1779",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check for existing s3 bucket\n",
+    "! echo S3_BUCKET_DATA=$(aws s3 ls 2>/dev/null | cut -c21- | grep sagemaker-fingerprint-data) > .env\n",
+    "\n",
+    "# kludge: loadenv from .env\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "# download the objects from s3\n",
+    "! [ ! -z \"$S3_BUCKET_DATA\" ] && \\\n",
+    "  aws s3 sync s3://${S3_BUCKET_DATA}/train/left $SCRATCH/train/left --quiet && \\\n",
+    "  aws s3 sync s3://${S3_BUCKET_DATA}/train/right $SCRATCH/train/right --quiet && \\\n",
+    "  aws s3 sync s3://${S3_BUCKET_DATA}/real $SCRATCH/real --quiet"
    ]
   },
   {
@@ -139,17 +162,10 @@
    "outputs": [],
    "source": [
     "# kludge: download dataset from git\n",
-    "! git clone https://github.com/redhat-na-ssa/demo-rosa-sagemaker-data.git ${SCRATCH}/.raw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a85a1779",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! tar -Jxf ${SCRATCH}/.raw/left.tar.xz -C \"${SCRATCH}\"/train/ && \\\n",
+    "! git clone https://github.com/redhat-na-ssa/demo-rosa-sagemaker-data.git ${SCRATCH}/.raw\n",
+    "\n",
+    "! [ ! -d \"${SCRATCH}\"/train/left ] && \\\n",
+    "  tar -Jxf ${SCRATCH}/.raw/left.tar.xz -C \"${SCRATCH}\"/train/ && \\\n",
     "  tar -Jxf ${SCRATCH}/.raw/right.tar.xz -C \"${SCRATCH}\"/train/ && \\\n",
     "  tar -Jxf ${SCRATCH}/.raw/real.tar.xz -C \"${SCRATCH}\""
    ]
@@ -1271,9 +1287,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_tensorflow2_p38",
+   "display_name": "venv",
    "language": "python",
-   "name": "conda_tensorflow2_p38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1285,11 +1301,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
-    "hash": "9fbaf16404a186558c5830ba9c1870690eb62baaca2b916af320bab80c6b3e76"
+    "hash": "0361594b5b97f35bff06ec8494ae2559195be08c9623d7de38603e3b93d11069"
    }
   }
  },
